chore: 구조 일치화
